<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#000000">

        <Button
            android:id="@+id/btnNewRecord"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:text="@string/new_entry" />

        <Button
            android:id="@+id/btnCloseRecord"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:text="@string/end_record" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:text="@string/back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>