<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#000000">

        <Button
            android:id="@+id/btnRecords"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:text="@string/record" />

        <Button
            android:id="@+id/btnOverview"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:text="@string/overview" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:text="@string/exit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>